Upgrading bash scripts, makefile and doc for OpenSuse Build Service and CI
-- .integration/opensuse-build-service.sh, .integration/SimTaDyn.spec:
add 1st script for OpenSuse Build Service (OBS).

-- Makefile.header: fix pathes for installing software (make install
DESTDIR = xxx PREFIX = yyy) to be conform with Linux standard (to be
used correctly with OBS) and use the software version in installation
dir as well as in the exec name. (before: /usr/local/SimTaDyn, now:
/usr/share/0.2/SimTaDyn. Before SimTaDyn, now: SimTaDyn-0.2).

-- .integration/*-launch_tests.sh: check installed files.

-- .makefile/targz.sh: add SimTaDyn version in the executable name,
upgrade the code.

-- external/gitclone.sh: rename and split the code into two files
(external/download-external-libs.sh and
external/compile-external-libs.sh) to be used by Makefile, CI scripts
and by opensuse-build-service.sh.

-- *Makefiles: adapt them with changes made in Makefile.header.
--  tests/*: adapt unit test not adapted new installation path.

Makefile*: fix install pathes

--- a/.makefile/Makefile.header
+++ b/.makefile/Makefile.header
@@ -54,16 +54,16 @@ endif
 
 ###################################################
 # Where to install project runnable and project data
-ifeq ($(ARCHI),Linux)
-PREFIX = /usr/local
-else ifeq ($(ARCHI),Darwin)
-PREFIX = /usr/local
-else
-PREFIX = /usr/local
+ifeq ($(PREFIX),)
+PREFIX = /usr
 endif
 BINDIR = $(DESTDIR)$(PREFIX)/bin
-PROJECT_DATA_ROOT = $(DESTDIR)$(PREFIX)/SimTaDyn
+DATADIR = $(DESTDIR)$(PREFIX)/share
+DOCDIR = $(DATADIR)/doc
+PROJECT_EXE = $(BINDIR)/$(TARGET)-$(VERSION)
+PROJECT_DATA_ROOT = $(DATADIR)/$(TARGET)/$(VERSION)
 PROJECT_DATA_PATH = $(PROJECT_DATA_ROOT)/data
+PROJECT_DOC_PATH = $(PROJECT_DATA_ROOT)/doc
 
 ###################################################
 # Select your favorite c++ compiler.
@@ -79,10 +79,6 @@ ifneq ($(PREFERED_CXX),)
 CXX = $(PREFERED_CXX)
 endif
 endif
-
-###################################################
-# Common defines
-SIMTADYN_DEFINES=-DBACKWARD_HAS_DW=1 -DCHECK_OPENGL -DSIMTADYN_DATA_PATH=\"$(PROJECT_DATA_PATH)\"
 
 ###################################################
 # Store files dependencies in *.d files.  When a file
