Cleaning code and misc
Separating Config.hpp code into several files: SimTaDyn.hpp and
PathManager.hpp.
Improving SimTaDyn config: for example log file was created near the
exec, now in /tmp).
Moving main.cpp code into SimTaDynContext class.
Logger remove dependencies with File and Config because could not add
LOGx() inside File.cpp code.
Remove gtksourceviewmm compilation warnings.
Remove useless includes.
Add class for defining strong type (like using foo = int which is just
an alias)

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,12 @@
 # SimTaDyn specifics
 build/*
 tests/build/*
+src/common/graphics/OpenGL/examples/build/*
+src/core/standalone/ClassicSpreadSheet/build/*
+src/forth/standalone/build/*
+external/zipper
+external/SOIL
+external/backward-cpp
 doc/html/*
 doc/coverage/*
 _*
