--- a/.makefile/Makefile.footer
+++ b/.makefile/Makefile.footer
@@ -20,6 +20,23 @@
 ##=====================================================================
 
 ###################################################
+# Generate the rapport of the code coverage
+.PHONY: coverage
+coverage: $(TARGET)
+	@$(call print-to,"Running","$(TARGET)","$(RAPPORT)","")
+	@./build/$(TARGET)
+	@$(call print-to,"Documentation","$(RAPPORT)","$(DOC)","")
+	@lcov --quiet --directory .. -c -o $(RAPPORT)
+	@lcov --quiet --remove $(RAPPORT) '/usr*' 'external/*' 'tests/*' -o $(RAPPORT)
+	@genhtml --quiet -o $(DOC) -t "$(TARGET)" $(RAPPORT)
+
+###################################################
+# Generate a header file with the project version
+version.h: VERSION
+	@$(call print-from,"Version","$(TARGET)","VERSION","")
+	@./$(M)/version.sh VERSION $(BUILD)/version.h
+
+###################################################
 # Display the compilator version (g++, clang ...)
 .PHONY: which-gcc
 which-gcc:
